--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "moment": "^2.22.2",
     "register-service-worker": "^1.0.0",
